@@ -6,7 +6,6 @@ import static com.google.common.truth.Truth.assertWithMessage;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.junit.After;
 import org.junit.Test;
@@ -27,15 +26,15 @@ public class ConversionFileWriterWrapperTest {
 
 	@After
 	public void deleteFiles() throws IOException {
-		Files.deleteIfExists(Paths.get("valid-QRDA-III-latest-qpp.json"));
-		Files.deleteIfExists(Paths.get("not-a-QRDA-III-file-error.json"));
-		Files.deleteIfExists(Paths.get("qrda_bad_denominator-qpp.json"));
-		Files.deleteIfExists(Paths.get("qrda_bad_denominator-error.json"));
+		Files.deleteIfExists(Path.of("valid-QRDA-III-latest-qpp.json"));
+		Files.deleteIfExists(Path.of("not-a-QRDA-III-file-error.json"));
+		Files.deleteIfExists(Path.of("qrda_bad_denominator-qpp.json"));
+		Files.deleteIfExists(Path.of("qrda_bad_denominator-error.json"));
 	}
 
 	@Test
 	public void testValidQpp() {
-		Path path = Paths.get("src/test/resources/valid-QRDA-III-latest.xml");
+		Path path = Path.of("src/test/resources/valid-QRDA-III-latest.xml");
 		ConversionFileWriterWrapper converterWrapper = new ConversionFileWriterWrapper(path);
 
 		Context context = new Context();
@@ -46,7 +45,7 @@ public class ConversionFileWriterWrapperTest {
 
 	@Test
 	public void testInvalidQpp() {
-		Path path = Paths.get("src/test/resources/not-a-QRDA-III-file.xml");
+		Path path = Path.of("src/test/resources/not-a-QRDA-III-file.xml");
 		ConversionFileWriterWrapper converterWrapper = new ConversionFileWriterWrapper(path);
 
 		converterWrapper.transform();
@@ -56,7 +55,7 @@ public class ConversionFileWriterWrapperTest {
 
 	@Test
 	public void testSkipValidations() {
-		Path path = Paths.get("src/test/resources/qrda_bad_denominator.xml");
+		Path path = Path.of("src/test/resources/qrda_bad_denominator.xml");
 		ConversionFileWriterWrapper converterWrapper = new ConversionFileWriterWrapper(path);
 
 		Context context = new Context();
@@ -69,12 +68,12 @@ public class ConversionFileWriterWrapperTest {
 	@Test
 	public void testErrorHasSourceId() throws IOException {
 		//when
-		Path path = Paths.get("src/test/resources/not-a-QRDA-III-file.xml");
+		Path path = Path.of("src/test/resources/not-a-QRDA-III-file.xml");
 		ConversionFileWriterWrapper converterWrapper = new ConversionFileWriterWrapper(path);
 		converterWrapper.transform();
 
 		//then
-		String sourceId = JsonTestHelper.readJsonAtJsonPath(Paths.get("not-a-QRDA-III-file-error.json"),
+		String sourceId = JsonTestHelper.readJsonAtJsonPath(Path.of("not-a-QRDA-III-file-error.json"),
 				"$.errors[0].sourceIdentifier", String.class);
 
 		assertThat(sourceId)
@@ -83,12 +82,12 @@ public class ConversionFileWriterWrapperTest {
 
 	@Test
 	public void testErrorHasDetail() throws IOException {
-		Path path = Paths.get("src/test/resources/not-a-QRDA-III-file.xml");
+		Path path = Path.of("src/test/resources/not-a-QRDA-III-file.xml");
 
 		//when
 		ConversionFileWriterWrapper converterWrapper = new ConversionFileWriterWrapper(path);
 		converterWrapper.transform();
-		Detail detail = JsonTestHelper.readJsonAtJsonPath(Paths.get("not-a-QRDA-III-file-error.json"),
+		Detail detail = JsonTestHelper.readJsonAtJsonPath(Path.of("not-a-QRDA-III-file-error.json"),
 				"$.errors[0].details[0]", Detail.class);
 
 		//then
@@ -103,17 +102,17 @@ public class ConversionFileWriterWrapperTest {
 		//setup
 		LocalizedProblem firstError = ProblemCode.NUMERATOR_DENOMINATOR_INVALID_VALUE.format("Numerator", "-1");
 		LocalizedProblem secondError = ProblemCode.NUMERATOR_DENOMINATOR_INVALID_VALUE.format("Denominator", "-1");
-		Path path = Paths.get("src/test/resources/qrda_bad_denominator.xml");
+		Path path = Path.of("src/test/resources/qrda_bad_denominator.xml");
 
 		//when
 		ConversionFileWriterWrapper converterWrapper = new ConversionFileWriterWrapper(path);
 		converterWrapper.transform();
-		Detail firstDetail = JsonTestHelper.readJsonAtJsonPath(Paths.get("qrda_bad_denominator-error.json"),
+		Detail firstDetail = JsonTestHelper.readJsonAtJsonPath(Path.of("qrda_bad_denominator-error.json"),
 				"$.errors[0].details[0]", Detail.class);
-		Detail secondDetail = JsonTestHelper.readJsonAtJsonPath(Paths.get("qrda_bad_denominator-error.json"),
+		Detail secondDetail = JsonTestHelper.readJsonAtJsonPath(Path.of("qrda_bad_denominator-error.json"),
 				"$.errors[0].details[1]", Detail.class);
 
-		JsonTestHelper.readJsonAtJsonPath(Paths.get("qrda_bad_denominator-error.json"), "$.errors[0].details");
+		JsonTestHelper.readJsonAtJsonPath(Path.of("qrda_bad_denominator-error.json"), "$.errors[0].details");
 
 		//then
 		assertThat(firstDetail.getMessage()).isEqualTo(firstError.getMessage());
@@ -123,14 +122,14 @@ public class ConversionFileWriterWrapperTest {
 	}
 
 	private void assertFileExists(final String fileName) {
-		Path possibleFile = Paths.get(fileName);
+		Path possibleFile = Path.of(fileName);
 		assertWithMessage("The file %s must exist.", fileName)
 				.that(Files.exists(possibleFile))
 				.isTrue();
 	}
 
 	private void assertFileDoesNotExists(final String fileName) {
-		Path possibleFile = Paths.get(fileName);
+		Path possibleFile = Path.of(fileName);
 		assertWithMessage("The file %s must NOT exist.", fileName)
 				.that(Files.exists(possibleFile))
 				.isFalse();
