@@ -17,7 +17,6 @@ import java.io.UncheckedIOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
@@ -52,7 +51,7 @@ class QrdaControllerV1Test {
 
 	private static final String GOOD_FILE_CONTENT = "Good file";
 
-	static final Path validationJsonFilePath = Paths.get("src/test/resources/testCpcPlusValidationFile.json");
+	static final Path validationJsonFilePath = Path.of("src/test/resources/testCpcPlusValidationFile.json");
 
 	private MultipartFile multipartFile;
 
